added css and java

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     </div>
             <div class="scoreboard">
                 <h4></h4>
-                <h4>Wins: <span id=wins></span></h4>
+                <h4>Wins: <span id="wins"></span></h4>
                 <h4>Losses: <span id="losses"></span></h4>
             </div>
         <div class="crystals"></div>
     <div class="totalscore"></div>
          <div class="jumboscore"></div>
-    
+    <script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
 </html>
