--- a/index.html
+++ b/index.html
@@ -21,11 +21,16 @@
 
     </div>
             <div class="scoreboard">
-                <h4></h4>
+                <div class="number">Number</div>
                 <h4>Wins: <span id="wins"></span></h4>
                 <h4>Losses: <span id="losses"></span></h4>
             </div>
-        <div class="crystals"></div>
+        <div class="crystals">
+            <img id="green"src="/assets/images/green.png" alt="green">
+            <img id="orange"src="/assets/images/orange.png" alt="orange">
+            <img id="red"src="/assets/images/red1.png" alt="ruby">
+            <img id="yellow"src="/assets/images/yellow4.png" alt="yellow">
+        </div>
     <div class="totalscore"></div>
          <div class="jumboscore"></div>
     <script type="text/javascript" src="assets/javascript/game.js"></script>
