--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
             <p>The value of each crystal is hidden from you until you click on it.</p>
             <p>Each time when the game starts, the game will change the values of each crystal.</p>
         </div>
-        <div class="totalscore"></div>
-        <div class="jumboscore"></div>
+        <div class="totalscore"><h2>Your Score:<span class="score"></span></h2></div>
     </div>
     <div class="randomNumber">
+            <div class="number">Number</div>
 
     </div>
             <div class="scoreboard">
-                <div class="number">Number</div>
+                
                 <h4>Wins: <span id="wins"></span></h4>
                 <h4>Losses: <span id="losses"></span></h4>
             </div>
