--- a/index.html
+++ b/index.html
@@ -2,36 +2,36 @@
 <html lang="en">
     <link rel="stylesheet" href="/assets/css/reset.css">
     <link rel="stylesheet" href="/assets/css/style.css">
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 <head>
     <title>Crystals Collector</title>
 </head>
 <body>
     <div class="collector">
         <h1>Crystals Collector!</h1>
-        <div class="rules">
+        <div class="rules" col-md-5>
             <p>You will be give a random number at the astar of the game.</p>
             <p>There are four crystals below. By clicking on a crystal you will add a specific amount of points to your total score.
             </p>
             <p>The value of each crystal is hidden from you until you click on it.</p>
             <p>Each time when the game starts, the game will change the values of each crystal.</p>
         </div>
-        <div class="totalscore"><h2>Your Score:<span class="score"></span></h2></div>
+        <div class="totalscore" col-sm-6><h2>Your Score:<span id="score"></span></h2></div>
     </div>
     <div class="randomNumber">
-            <div class="number">Number</div>
-
+            <h2>Number: <span id="number"></span></h2>
     </div>
             <div class="scoreboard">
-                
+                <div class="col-sm-4">
                 <h4>Wins: <span id="wins"></span></h4>
                 <h4>Losses: <span id="losses"></span></h4>
             </div>
+        </div>
         <div class="crystals">
-            <img id="green"src="/assets/images/green.png" alt="green">
-            <img id="orange"src="/assets/images/orange.png" alt="orange">
-            <img id="red"src="/assets/images/red1.png" alt="ruby">
-            <img id="yellow"src="/assets/images/yellow4.png" alt="yellow">
+            <img id="crystal1"src="/assets/images/green.png" alt="green">
+            <img id="crystal2"src="/assets/images/orange.png" alt="orange">
+            <img id="crystal3"src="/assets/images/red1.png" alt="ruby">
+            <img id="crystal4"src="/assets/images/yellow4.png" alt="yellow">
         </div>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="assets/javascript/game.js"></script>
