the stones of hell

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             <p>The value of each crystal is hidden from you until you click on it.</p>
             <p>Each time when the game starts, the game will change the values of each crystal.</p>
         </div>
-        <div class="totalscore" col-sm-6><h2>Your Score:<span id="score"></span></h2></div>
+        <div class="totalscore" col-sm-6><h2>Your Score: <span id="score"></span></h2></div>
     </div>
     <div class="randomNumber">
             <h2>Number: <span id="number"></span></h2>
     </div>
             <div class="scoreboard">
-                <div class="col-sm-4">
+                <div class="col-md-8">
                 <h4>Wins: <span id="wins"></span></h4>
                 <h4>Losses: <span id="losses"></span></h4>
             </div>
