--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="collector">
-        <h1>Crystals Collector!</h1>
+        <h1 id="main">Crystals Collector!</h1>
         <div class="rules" col-md-5>
             <p>You will be give a random number at the astar of the game.</p>
             <p>There are four crystals below. By clicking on a crystal you will add a specific amount of points to your total score.
@@ -22,7 +22,7 @@
             <h2>Number: <span id="number"></span></h2>
     </div>
             <div class="scoreboard">
-                <div class="col-md-8">
+                <div class="col-lg-12">
                 <h4>Wins: <span id="wins"></span></h4>
                 <h4>Losses: <span id="losses"></span></h4>
             </div>
