added css reset and fixed css.style

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <link rel="stylesheet" href="/assets/css/reset.css">
     <link rel="stylesheet" href="/assets/css/style.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <head>
     <title>Crystals Collector</title>
 </head>
@@ -11,10 +11,10 @@
         <h1 id="main">Crystals Collector!</h1>
         <div class="rules" col-md-5>
             <p>You will be give a random number at the astar of the game.</p>
-            <p>There are four crystals below. By clicking on a crystal you will add a specific amount of points to your total score.
+            <p>There are four crystals to the side. By clicking on a crystal you will add a specific amount of points to your total score.
             </p>
             <p>The value of each crystal is hidden from you until you click on it.</p>
-            <p>Each time when the game starts, the game will change the values of each crystal.</p>
+            <p>Each time when the game starts, the game will change the values of each crystal. Good luck!</p>
         </div>
         <div class="totalscore" col-sm-6><h2>Your Score: <span id="score"></span></h2></div>
     </div>
@@ -22,7 +22,7 @@
             <h2>Number: <span id="number"></span></h2>
     </div>
             <div class="scoreboard">
-                <div class="col-lg-12">
+                <div class="shadow-lg p-3 mb-4 bg-white rounded">
                 <h4>Wins: <span id="wins"></span></h4>
                 <h4>Losses: <span id="losses"></span></h4>
             </div>
