--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-    <link rel="stylesheet" href="/assets/css/reset.css">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <head>
     <title>Crystals Collector</title>
@@ -28,10 +28,10 @@
             </div>
         </div>
         <div class="crystals">
-            <img id="crystal1"src="/assets/images/green.png" alt="green">
-            <img id="crystal2"src="/assets/images/orange.png" alt="orange">
-            <img id="crystal3"src="/assets/images/red1.png" alt="ruby">
-            <img id="crystal4"src="/assets/images/yellow4.png" alt="yellow">
+            <img id="crystal1"src="assets/images/green.png" alt="green">
+            <img id="crystal2"src="assets/images/orange.png" alt="orange">
+            <img id="crystal3"src="assets/images/red1.png" alt="ruby">
+            <img id="crystal4"src="assets/images/yellow4.png" alt="yellow">
         </div>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="assets/javascript/game.js"></script>
