--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="crystals">
             <img id="crystal1"src="assets/images/green.png" alt="green">
             <img id="crystal2"src="assets/images/orange.png" alt="orange">
-            <img id="crystal3"src="assets/images/red1.png" alt="ruby">
+            <img id="crystal3"src="assets/images/Red1.png" alt="ruby">
             <img id="crystal4"src="assets/images/yellow4.png" alt="yellow">
         </div>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
